feat: :hammer: adding swagger
