# Routes/peliculaRoutes.js
@@ -1,33 +1,35 @@
 import {Router} from "express";
 import {requireAdmin} from "../utils/adminRequire.js"
 import {controllerMovie} from "../Controllers/peliculaController.js"
+import {pelicula} from "../Models/peliculaModel.js"
 
+const pelModel = new pelicula()
 const pel = new controllerMovie()
 
 const routerMovie = Router();
 
-routerMovie.post('./new-Pel',requireAdmin,async (req,res)=>{
-    await pel.createPel(req,res);
+routerMovie.post('/new-Pel',requireAdmin,async (req,res)=>{
+    await pelModel.createMovie(req,res);
 })
 
-routerMovie.get('./all-Pel',async (req,res)=>{
-    await pel.getMoviesA(req,res);
+routerMovie.get('/all-Pel',async (req,res)=>{
+    await pelModel.getAllMovies(req,res);
 })
 
-routerMovie.get('./genre-Pel/:genre',async (req,res)=>{
-    await pel.getMoviesG(req.params.genre,res);
+routerMovie.get('/genre-Pel/:genre',async (req,res)=>{
+    await pelModel.getMovieByGenre(req.params.genre,res);
 })
 
-routerMovie.put('./update-Pel:id',requireAdmin,async (req,res)=>{
-    await pel.updatePel(req.params.id,res);
+routerMovie.put('/update-Pel:id',requireAdmin,async (req,res)=>{
+    await pelModel.updateMovie(req,id=req.params.id,res);
 })
 
-routerMovie.delete('./delete-Pel:id',requireAdmin,async (req,res)=>{
-    await pel.deletePel(req,req.params.id,res);
+routerMovie.delete('/delete-Pel:id',requireAdmin,async (req,res)=>{
+    await pelModel.deleteMovie(req,req.params.id,res);
 })
 
 routerMovie.get('/pel-popu',async (req,res)=>{
-    await pel.getMoviesPop(req,res)
+    await pelModel.getMoviesPop(req,res)
 })
 
 export default routerMovie;
