# swagger-output.json
@@ -33,6 +33,9 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
@@ -63,6 +66,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
@@ -87,7 +93,7 @@
         }
       }
     },
-    "/movies./new-Pel": {
+    "/movies/new-Pel": {
       "post": {
         "description": "",
         "responses": {
@@ -97,7 +103,7 @@
         }
       }
     },
-    "/movies./all-Pel": {
+    "/movies/all-Pel": {
       "get": {
         "description": "",
         "responses": {
@@ -107,7 +113,7 @@
         }
       }
     },
-    "/movies./genre-Pel/{genre}": {
+    "/movies/genre-Pel/{genre}": {
       "get": {
         "description": "",
         "parameters": [
@@ -127,7 +133,7 @@
         }
       }
     },
-    "/movies./{update-Pelid}": {
+    "/movies/{update-Pelid}": {
       "put": {
         "description": "",
         "parameters": [
@@ -147,7 +153,7 @@
         }
       }
     },
-    "/movies./{delete-Pelid}": {
+    "/movies/{delete-Pelid}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -189,6 +195,9 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
@@ -219,6 +228,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
@@ -243,7 +255,7 @@
         }
       }
     },
-    "./new-Pel": {
+    "/new-Pel": {
       "post": {
         "description": "",
         "responses": {
@@ -253,7 +265,7 @@
         }
       }
     },
-    "./all-Pel": {
+    "/all-Pel": {
       "get": {
         "description": "",
         "responses": {
@@ -263,7 +275,7 @@
         }
       }
     },
-    "./genre-Pel/{genre}": {
+    "/genre-Pel/{genre}": {
       "get": {
         "description": "",
         "parameters": [
@@ -283,7 +295,7 @@
         }
       }
     },
-    "./{update-Pelid}": {
+    "/{update-Pelid}": {
       "put": {
         "description": "",
         "parameters": [
@@ -300,10 +312,42 @@
           "403": {
             "description": "Forbidden"
           }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "title": {
+                    "example": "any"
+                  },
+                  "summary": {
+                    "example": "any"
+                  },
+                  "year": {
+                    "example": "any"
+                  },
+                  "popularity": {
+                    "example": "any"
+                  },
+                  "poster": {
+                    "example": "any"
+                  },
+                  "backdrop": {
+                    "example": "any"
+                  },
+                  "genres": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
         }
       }
     },
-    "./{delete-Pelid}": {
+    "/{delete-Pelid}": {
       "delete": {
         "description": "",
         "parameters": [
